Add Feed Formulation 3

--- a/app/src/main/res/layout/activity_cattle_calculator.xml
+++ b/app/src/main/res/layout/activity_cattle_calculator.xml
@@ -6,17 +6,9 @@
     android:orientation="vertical">
 
     <FrameLayout
-        android:id="@+id/fragmentContainer"
+        android:id="@+id/cattleContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
-
-    <com.ismaeldivita.chipnavigation.ChipNavigationBar
-        android:id="@+id/bottom_nav"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        app:cnb_iconSize="30dp"
-        app:cnb_menuResource="@menu/bottom_nav" />
 
 </LinearLayout>
