--- a/app/src/main/res/layout/dialog_add_new_feed.xml
+++ b/app/src/main/res/layout/dialog_add_new_feed.xml
@@ -1,246 +1,121 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.fragments.FeedsFragment"
-    tools:ignore="HardcodedText, UnusedAttribute, TextContrastCheck">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:ignore="HardcodedText, UnusedAttribute, TextContrastCheck"
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:orientation="vertical" tools:context=".ui.fragments.FeedsFragment">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="Warning! Use this feature only if you know what you are doing."
-        android:textColor="#FF0000"
-        android:textSize="12sp"
-        android:typeface="monospace" />
+        android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:padding="8dp" android:textColor="#FF0000"
+        android:textSize="12sp" android:typeface="monospace"
+        android:text="Warning! Use this feature only if you know what you are doing." />
 
 <!--    DETAILS     -->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="Details"
-            android:textColor="?attr/colorPrimary"
-            android:textSize="16sp"
-            android:typeface="monospace" />
+            android:layout_marginTop="0dp" android:text="Details"  style="@style/Headings" />
 
         <com.google.android.material.checkbox.MaterialCheckBox
-            android:id="@+id/cbChecked"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="16dp"
-            android:layoutDirection="rtl"
-            android:text="Selected"
-            android:tooltipText="Should be selected by default?"
+            android:id="@+id/cbChecked" android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_alignParentEnd="true"
+            android:layout_marginEnd="16dp" android:layoutDirection="rtl"
+            android:text="Selected" android:tooltipText="Should be selected by default?"
             android:checked="true" />
 
     </RelativeLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txtName"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="16dp"
-        android:hint="Name"
-        android:labelFor="@id/edtName">
-
+        android:id="@+id/txtName" android:hint="Name" style="@style/CommonInputLayout" >
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edtName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:singleLine="true" />
+            android:id="@+id/edtName" android:singleLine="true"
+            android:layout_width="match_parent" android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
 
-
-
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txtCost"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="16dp"
-        android:hint="Cost"
-        android:labelFor="@id/edtCost"
-        app:placeholderText="Cost per KG">
-
+        android:id="@+id/txtCost" android:hint="Cost" app:placeholderText="Cost per KG" style="@style/CommonInputLayout" >
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edtCost"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="numberDecimal" />
+            android:id="@+id/edtCost" style="@style/DetailsInputText" />
     </com.google.android.material.textfield.TextInputLayout>
 
 <!--    NUTRIENTS   -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:layout_marginTop="24dp"
-        android:padding="8dp"
-        android:text="Nutrients"
-        android:textColor="?attr/colorPrimary"
-        android:textSize="16sp"
-        android:typeface="monospace" />
+    <TextView android:text="Nutrients"  style="@style/Headings" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="16dp"
-        android:orientation="horizontal"
-        android:baselineAligned="false">
+    <LinearLayout android:orientation="vertical" style="@style/CommonInputLayout">
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="DM (%)">
+        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:baselineAligned="false">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edtDM"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="numberDecimal"
-                android:nextFocusDown="@id/edtCP" />
-        </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:hint="DM (%)" style="@style/DetailsInputLayout" >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edtDM" android:nextFocusDown="@id/edtCP" style="@style/DetailsInputText" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="CP (%)">
+            <com.google.android.material.textfield.TextInputLayout
+                android:hint="CP (%)" style="@style/DetailsInputLayout" >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edtCP" android:nextFocusDown="@id/edtTDN"  style="@style/DetailsInputText" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edtCP"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="numberDecimal"
-                android:nextFocusDown="@id/edtTDN" />
-        </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:hint="TDN (%)" style="@style/DetailsInputLayout" >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edtTDN" android:nextFocusDown="@id/edtCa" style="@style/DetailsInputText" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="TDN (%)">
+        </LinearLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edtTDN"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="numberDecimal" />
-        </com.google.android.material.textfield.TextInputLayout>
+        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:baselineAligned="false">
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="Ca (%)">
+            <com.google.android.material.textfield.TextInputLayout
+                android:hint="Ca (%)" style="@style/DetailsInputLayout" >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edtCa" android:text="0.0"
+                    android:nextFocusDown="@id/edtPh" style="@style/DetailsInputText" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edtCa"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="numberDecimal"
-                android:text="0.0" />
-        </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:hint="Ph (%)" style="@style/DetailsInputLayout" >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edtPh" android:text="0.0"
+                    android:nextFocusDown="@id/edtMinIncl1" style="@style/DetailsInputText" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="Ph (%)">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edtPh"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="numberDecimal"
-                android:text="0.0" />
-        </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
 <!--    CONSTRAINTS -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:layout_marginTop="24dp"
-        android:padding="8dp"
-        android:text="Constraints"
-        android:textColor="?attr/colorPrimary"
-        android:textSize="16sp"
-        android:typeface="monospace" />
+    <TextView android:text="Constraints"  style="@style/Headings" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingHorizontal="16dp"
-        android:baselineAligned="false">
+    <LinearLayout style="@style/CommonInputLayout">
 
         <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="Cow (%)"
-            app:placeholderText="Min. Quantity (%)">
-
+            android:hint="Cow (%)" app:placeholderText="Max. Quantity (%)" style="@style/DetailsInputLayout" >
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edtMinIncl1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal" />
+                android:id="@+id/edtMinIncl1" android:nextFocusDown="@id/edtMinIncl2" style="@style/DetailsInputText" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="Buffalo"
-            app:placeholderText="Min. Quantity (%)">
-
+            android:hint="Buffalo (%)" app:placeholderText="Max. Quantity (%)" style="@style/DetailsInputLayout" >
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edtMinIncl2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal" />
+                android:id="@+id/edtMinIncl2" style="@style/DetailsInputText" />
         </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Type"
-        android:paddingHorizontal="16dp"
+        android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:hint="Type" android:paddingHorizontal="16dp"
         android:labelFor="@+id/sprType">
 
         <AutoCompleteTextView
             style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
-            android:id="@+id/sprType"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="none"
+            android:id="@+id/sprType" android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:inputType="none"
             android:entries="@array/type_array" />
     </com.google.android.material.textfield.TextInputLayout>
 
