--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,9 +19,12 @@
             android:title="@string/menu_tmrmaker" />
         <item
             android:id="@+id/nav_settings"
-            android:layout_gravity="bottom"
             android:icon="@drawable/ic_settings"
             android:title="@string/menu_settings" />
+        <item
+            android:id="@+id/nav_about"
+            android:icon="@drawable/ic_info"
+            android:title="@string/menu_about" />
     </group>
 
 </menu>
