--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -18,10 +18,10 @@
             android:icon="@drawable/ic_anim_info"
             android:title="@string/menu_tmrmaker" />
         <item
-            android:id="@+id/nav_settings"
+            android:id="@+id/nav_more"
             android:layout_gravity="bottom"
-            android:icon="@drawable/ic_settings"
-            android:title="@string/menu_settings" />
+            android:icon="@drawable/ic_anim_more"
+            android:title="@string/menu_more" />
     </group>
 
 </menu>
