--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -52,10 +52,10 @@
         android:label="@string/menu_about"
         tools:layout="@layout/fragment_about" />
 
-<!--    <fragment-->
-<!--        android:id="@+id/nav_about_org"-->
-<!--        android:name="com.jery.feedformulation.ui.more.AboutOrgFragment"-->
-<!--        android:label="@string/menu_theme"-->
-<!--        tools:layout="@layout/fragment_theme" />-->
+    <fragment
+        android:id="@+id/nav_about_org"
+        android:name="com.jery.feedformulation.ui.more.AboutOrgFragment"
+        android:label="@string/nav_header_subtitle"
+        tools:layout="@layout/fragment_about_org" />
 
 </navigation>
