--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -90,7 +90,7 @@
 
     <!-- Help -->
     <TextView
-        android:id="@+id/tv_about_org"
+        android:id="@+id/tvAboutOrganization"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
