--- a/app/src/main/res/layout/fragment_tmrmaker.xml
+++ b/app/src/main/res/layout/fragment_tmrmaker.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.tmrmaker.TmrmakerFragment">
 
     <FrameLayout
-        android:id="@+id/fragment_container"
+        android:id="@+id/fragment_container_tmrmaker"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
